Added `@Builder` and `@AllArgsConstructor` to `Word` entity and updated `WordService` to use builder pattern for creating `Word`. Refactored to use `toList()` instead of `collect(Collectors.toList())` for consistency.